@@ -1,3 +1,6 @@
+-------------------------- soilDB 1.6.7 (2015-12-16) ----------------------------
+* experimental function for processing SDA queries that return geometry: processSDA_WKT()
+
 -------------------------- soilDB 1.6.5 (2015-12-03) ----------------------------
 * bug fix for poorly specified gemomorphic descriptions, caused fetchNASIS() to barf
 * fetchKSSL() gains new query filters, see man page
